<resources>
    <string name="app_name">DB Application</string>
    <string name="camera">camera</string>
    <string name="input">input</string>
    <string name="share">share</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="shop_name">shop name</string>
    <string name="rank">rank</string>
    <string name="comment">comment</string>
    <string name="picture">picture</string>
</resources>