<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="30dp"
                android:textStyle="bold"
                android:text="@string/shop_name"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="30dp"
                android:textStyle="bold"
                android:text="@string/rank"/>

            <EditText
                android:id="@+id/editTextRank"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="30dp"
                android:textStyle="bold"
                android:text="@string/comment"/>

            <EditText
                android:id="@+id/editTextComment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/inputPctur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="centerInside"
                android:contentDescription="Puctur"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/btnok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ok"/>

            <Button
                android:id="@+id/btncancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>